# HeartRateBand

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  HR_filter_ba.2.50Hz.mat  HR_filter_ba.2.mat  HR_filter_ba.4.mat  README.md  analyse.ipynb  parquet_to_npy.ipynb  platformio.ini  process_npy.ipynb  red.parquet  red_100Hz_2024-04-01_11-29-27.parquet  red_100Hz_2024-04-01_14-40-56.parquet  red_50Hz_2024-04-02_09-46-52.parquet  sdkconfig  sdkconfig.old
components/boost_mp11/: CMakeLists.txt
components/cib/: CMakeLists.txt
components/conc/: CMakeLists.txt
components/cpp-channel/: CMakeLists.txt
components/eigen/: CMakeLists.txt
components/fmt/: CMakeLists.txt
components/hx711/: CMakeLists.txt
components/max3010x/: CMakeLists.txt
components/max3010x_lib/: CMakeLists.txt
components/modbus_slave/: CMakeLists.txt
components/nanopb/: CMakeLists.txt
components/protobuf/spec/: command.proto
components/stdx/: CMakeLists.txt
components/tinycbor/: CMakeLists.txt  README.md
components/tinycbor/port/: cbor.h
main/: CMakeLists.txt
main/inc/: LoadCell.h  Punch.h  app_nvs.h  button.h  common.h  event_handler.h  instant.h  undef_arduino.h  utils.h  value_reading.h  valve.h  wlan_entity.h  wlan_manager.h  wlan_pb.h
main/src/: app_main.cpp  app_nvs.cpp  event_handler.cpp  utils.cpp  value_reading.cpp  wlan_manager.cpp
scripts/: pub.py  run.sh  serve.py  sub.py
src/: Punch.h  main.cpp
